# INZ

./: README.md  Wyniki badan.xlsx  inz.txt  prezka.pptx
Plansza4.0/ChessEngineCpp/: CMakeLists.txt
Plansza4.0/ChessEngineCpp/source/app/: main.cpp
Plansza4.0/ChessEngineCpp/source/module/: Ai.cpp  Ai.h  Board.cpp  Board.h  Enums.h  Move.cpp  Move.h  module.cpp
Plansza4.0/ChessEngineCpp/vsStudio/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Szaszki.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  pybind11app.vcxproj  pybind11app.vcxproj.filters  pybind11module.vcxproj  pybind11module.vcxproj.filters
Plansza4.0/ChessEngineCpp/vsStudio/pybind11app.dir/Debug/: pybind11app.exe.recipe  pybind11app.ilk
Plansza4.0/ChessEngineCpp/vsStudio/pybind11app.dir/Debug/pybind11app.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Plansza4.0/ChessEngineCpp/vsStudio/pybind11module.dir/Debug/: pybind11module.cp38-win_amd64.ilk  pybind11module.cp38-win_amd64.pyd.recipe
Plansza4.0/ChessEngineCpp/vsStudio/pybind11module.dir/Debug/pybind11module.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pybind11module.lastbuildstate  pybind11module.write.1u.tlog
Plansza4.0/ChessEngineCpp/vsStudio/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
Plansza4.0/ChessEngineCpp/vsStudio/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  (+2 more)
(+51 files in other folders)
